objects/OpportunityContactRole.object
<CustomObject>
    <fields>
        <fullName>No_Longer_Works_Here__c</fullName>
        <formula>Contact.No_Longer_Works_Here__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Longer Works Here</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
</CustomObject>